# snake_rat

./: Cargo.toml  DEVELOPMENT.md  README.md  RELEASES.md
automation_tasks_rs/src/: main.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js  tidy_warnings.txt
docs/search.desc/snake_rat/: snake_rat-desc-0-.js
docs/snake_rat/: all.html  fn.main.html  index.html  struct.App.html
docs/src/snake_rat/: main.rs.html
docs/trait.impl/core/default/: trait.Default.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: main.rs
